# bluetype

./: .gitignore  README.md  TODO.txt  com.mattjakeman.Bluetype.json  meson.build
.github/workflows/: main.yml
data/: com.mattjakeman.Bluetype.appdata.xml.in  com.mattjakeman.Bluetype.desktop.in  com.mattjakeman.Bluetype.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: bl-application.c  bl-application.h  bl-document-text.c  bl-document-text.h  bl-document-view.c  bl-document-view.h  bl-window.blp  bl-window.c  bl-window.h  bl-window.ui  bluetype.gresource.xml  main.c  meson.build  style.css
src/text/: text-block.c  text-block.h  text-list.c  text-list.h  text-node.c  text-node.h  text-table.c  text-table.h  text.h
subprojects/: gtk-blueprint-tool.wrap
tests/: meson.build  text.c
